# sadbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bot.py  config.py  createdatabase.sh  createdb.sql  default.nix  dev-requirements.in  dev-requirements.txt  flake.nix  messages.db  mypy.ini  pylintrc  pyproject.toml  requirements.in  requirements.txt  sadbot.service  setup.py  test.sql
.github/workflow/: main.yml
.github/workflows/: codeql-analysis.yml  main.yml
sadbot/: __init__.py  __main__.py  action_manager_interface.py  app.py  bot_action.py  bot_reply.py  chat_helper.py  chat_permissions.py  command_interface.py  config.py  functions.py  managers_container.py  message.py  message_repository.py  permissions.py  user.py
sadbot/assets/pat/: 1  2
sadbot/classes/: captcha.py  group_configs.py  ocr.py  permissions.py  plugins_keyboard.py  revolver.py  user_warnings.py
sadbot/commands/: __init__.py  activity.py  amogus.py  ban.py  beaver.py  bible.py  bookmark.py  canadian.py  captcha.py  captcha_kick.py  captcha_welcome.py  channel.py  close_thread.py  compliment.py  config.py  cope.py  cringe.py  ddg.py  deepfry.py  exif.py  fbi.py  func_plot.py  get_chat_id.py  get_id.py  git_pull.py  godquote.py  help.py  hi_i_am.py  hug.py  install_kde.py  insult.py  interface.py  kick.py  lenovo.py  letsdo.py  list.py  mental_math.py  mods.py  mute.py  ocr.py  (+35 more)
sadbot/commands/googletrans/: LICENSE  __init__.py  client.py  constants.py  gtoken.py  models.py  urls.py  utils.py
sadbot/managers/: captcha_timeout.py  remind_me.py  systemd_restart.py
