[tool.poetry]
name = "sadbot"
version = "0.0.0"
description = ""
authors = ["hydrastro <9256943+hydrastro@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.0.1"
html2text = "^2020.1.16"
matplotlib = "^3.5.1"
sympy = "^1.9"
yt-dlp = "^2022.2.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
